

\-- release 2.6.4

  * replace SummerRunner.run() with AppLifecycleListener.beforeApplicationStart()
  * IdleEventListener need to provide idle interval

\-- release 2.6.3

  * log root cause for config error
  * memo with log level
  * IdleEventMonitor interval will be provided by IdleEventListener.getIdleIntervalMillis() to avoid app from restarting for new config value

\-- release 2.6.2

  * In case of multiple HttpClient instances, each with different ObjectMapper configuration (e.g. different date format), a default shared ObjectMapper instance was being used to parse the response, this has been changed to let each HttpClient instance has its own ObjectMapper instance by passing the ObjectMapper instance from HttpClient to RPCResult.
  * gRPC client config: when trust store is not specified, user can choose default one as JDK or TrustAll
  * IdleEventMonitor only start when the param threshold > 0
  * log refactoring: make HTTP server and gRPC server status log triggered by pool size change when log.trace is enabled
  * -domain <name> will throw exception when folder does not exist




\-- release 2.6.1

  * Fixed all legacy GitHub CodeQL alerts and security issues.

  * Fixed all legacy GitHub Codacy Security Scan reported issues.

  * Improved security - configuration behavior changed as below of HttpClientConfig, GRPCClientConfig, MqttClientConfig and AuthConfig (cfg_auth.propertie)
    1. TLS protocol: Use plaintext no SSL/TLS if TLS protocol is configured as blank or empty string.
    2. Keystore: Use JDK default keystore if not specified, behavior of using 'plaintext no SSL/TLS' has been removed.
    3. Truststore: Use JDK default truststore if not specified, behavior of using `TrustManager` that accepts all certificates has been removed.

  * Improved security - configuration behavior of NioConfig
    1. TLS protocol: Use plaintext no SSL/TLS if TLS protocol is configured as blank or empty string.