@@ -17,13 +17,14 @@ package org.summerboot.jexpress.boot.event;
 
 import org.summerboot.jexpress.boot.SummerApplication;
 import org.summerboot.jexpress.boot.config.JExpressConfig;
+import org.summerboot.jexpress.nio.IdleEventMonitor;
 
 import java.io.File;
 
 /**
  * @author Changski Tie Zheng Zhang 张铁铮, 魏泽北, 杜旺财, 杜富贵
  */
-public interface AppLifecycleListener {
+public interface AppLifecycleListener extends IdleEventMonitor.IdleEventListener {
     void beforeApplicationStart(SummerApplication.AppContext context) throws Exception;
 
     void onApplicationStart(SummerApplication.AppContext context, String appVersion, String fullConfigInfo) throws Exception;
