@@ -64,7 +64,13 @@ public class GRPCServer {
     protected ScheduledExecutorService statusReporter = null;
     //protected boolean servicePaused = false;
 
-    public static final IdleEventMonitor IDLE_EVENT_MONITOR = new IdleEventMonitor(GRPCServer.class.getSimpleName());
+    public static final IdleEventMonitor IDLE_EVENT_MONITOR = new IdleEventMonitor(GRPCServer.class.getSimpleName()) {
+        @Override
+        public long getIdleIntervalMillis() {
+            return TimeUnit.SECONDS.toMillis(GRPCServerConfig.cfg.getIdleThresholdSecond());
+        }
+    };
+
 
     public ServerBuilder getServerBuilder() {
         return serverBuilder;
